unpackaged/objects/AccountSubSegmentationMatrix__mdt.object
<CustomObject>
  <description>Configurations for Account Sub-Segmentations.</description>
  <fields>
    <fullName>ControllingField__c</fullName>
    <description>Controlling field on the Account to evaluate.</description>
    <inlineHelpText>Controlling field on the Account to evaluate</inlineHelpText>
    <label>Controlling Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <description>Country Code in ISO Alpha 2 format.</description>
    <inlineHelpText>Country Code in ISO Alpha 2 format.</inlineHelpText>
    <label>Country (Alpha 2)</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>LowThresholdMIN__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Low Threshold (MIN)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>MediumThresholdMAX__c</fullName>
    <description>Max number that is within "Medium".</description>
    <inlineHelpText>Max number that is within "Medium"</inlineHelpText>
    <label>Medium Threshold (MAX)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>MediumThresholdMIN__c</fullName>
    <description>Lowest number to be classified as "Medium".</description>
    <inlineHelpText>Lowest number to be classified as "Medium"</inlineHelpText>
    <label>Medium Threshold (MIN)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>TargetField__c</fullName>
    <description>Target field to set on the Account.</description>
    <inlineHelpText>Target field to set on the Account</inlineHelpText>
    <label>Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <label>Account Sub-Segmentation Matrix</label>
  <pluralLabel>Account Sub-Segmentation Matrices</pluralLabel>
</CustomObject>